# advent-of-code

aoc-2025/: aoc-2025.opam  dune-project  new_day.sh
aoc-2025/lib/: common.ml  common.mli  day1.ml  day10.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dayN.ml  dune
